@@ -441,19 +441,25 @@ class _UnconfiguredTree(prototype.tree):
         return [neg, pos]
 
     def _regen_operation_helper(self, **kwds):
-        return _RegenOpHelper(force=bool(kwds.get('force', False)))
+        return _RegenOpHelper(self, force=bool(kwds.get('force', False)),
+            preload_eclasses=bool(kwds.get('preload_eclasses', True)))
 
 
 class _RegenOpHelper(object):
 
-    def __init__(self, force=False):
+    def __init__(self, repo, force=False, preload_eclasses='preload_eclasses'):
         self.force=force
+        self.preload_eclasses = preload_eclasses
         self.ebp = processor.request_ebuild_processor()
+        if self.preload_eclasses:
+            self.ebp.preload_eclasses(repo.eclass_cache)
 
     def __call__(self, pkg):
         return pkg._fetch_metadata(ebp=self.ebp, force_regen=self.force)
 
     def finish(self):
+        if self.preload_eclasses:
+            self.ebp.clear_preloaded_eclasses()
         processor.release_ebuild_processor(self.ebp)
         self.ebp = None
 
