@@ -4,6 +4,10 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* fixed potential for eclass preloading to use the incorrect repo source.
+  This could only be triggered by actual API usage, not from commandline
+  usage.
+
 * ebuild package instances now have an office, supported .inherited attribute
   for finding out the eclasses used by a pkg.  In addition, this attribute
   is now installed into the vdb repository, and binpkgs.
